llvm/test/tools/llvm-ifs/conflict-header-triple.ifs
# RUN: not llvm-ifs -action write-ifs -o - %s %S/object.ifs 2>&1 | \
# RUN: FileCheck %s --check-prefixes=CHECK-IFS

# CHECK-IFS: error: Interface Stub: Triple Mismatch.
# CHECK-IFS-NEXT: Filenames:
# CHECK-IFS-NEXT: Triple Values: mips-unknown-linux x86_64-unknown-linux-gnu

--- !experimental-ifs-v2
IfsVersion: 2.0
Triple:          mips-unknown-linux
ObjectFileFormat: ELF
Symbols:
  - { Name: a, Type: Func }
...
